--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Find a dog that suits you!</h1>
     <p>Did you know there are almost <b>200</b> dog breeds in the world?</p>
-    <p>2 new canine breeds have been <i><a href="https://www.koaa.com/news/national/two-new-dog-breeds-usher-in-2020"> added</a></i> to the list of breeds in 2020.</p>
+    <p>2 new canine breeds have been <i><a href="https://www.koaa.com/news/national/two-new-dog-breeds-usher-in-2020" target="_blank"> added</a></i> to the list of breeds in 2020.</p>
     <p>We will help you find just the right breed and dog that <em>you</em> want!</p>
-    <p>Here you can find the full <i><a href="https://dogtime.com/dog-breeds/profiles">list</a></i> of all the dog breeds!</p>
+    <p>Here you can find the full <i><a href="https://dogtime.com/dog-breeds/profiles" target="_blank">list</a></i> of all the dog breeds!</p>
     <p>Here is a list of the top 5 most popular dog breeds in the world:</p>
     <ol>
         <li>Labrador retriever</li>
