text style update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </ol>
     <figure>
         <img src="images/germanshepherdpuppy.jpg" alt="" width="250" height="200">
-        <figcaption>A german shepherd puppy</figcaption>
+        <figcaption><b>A german shepherd puppy</b></figcaption>
     </figure>
 </body>
 </html>
