--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name ="description" content ="A website created to help aspiring dog owners to find just the right dog for themselves!">
 </head>
 <body>
+    <h1>Exercise 1</h1>
     <h1>Find a dog that suits you!</h1>
     <p>Did you know there are almost <b>200</b> dog breeds in the world?</p>
     <p>2 new canine breeds have been <i><a href="https://www.koaa.com/news/national/two-new-dog-breeds-usher-in-2020" target="_blank"> added</a></i> to the list of breeds in 2020.</p>
